@@ -16,6 +16,8 @@ HEAD
 	+ Better check of mailname, assure that mailname is correct before
 	enabling module
 	+ Changed SIEVE directory location to /var/vmail/sieve
+	+ Bad mailname doesnt disable module activation. Warning message
+	added when bad mailname is set. Mailname check in vdomains
 1.3.14
 	+ Added precondition in ObjectPolicy model
 	+ Account home in dovecot set to its maildir, this is necesary for
